--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALCULATOR</title>
 
-    <link rel="stylesheet" href="C:\Users\mahes\OneDrive\ドキュメント\web development\CSS\calci.css">
+    <link rel="stylesheet" href="calci.css">
 </head>
 <body>
    
@@ -110,5 +110,5 @@
         
    
 </body>
-<script src="C:\Users\mahes\OneDrive\ドキュメント\web development\java_script\calci.js"></script>
+<script src="calci.js"></script>
 </html>
