--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="btns">.</div>
                     <div class="btns">e</div>
                     <div class="btns" id="thanks">Thank you for visiting</div>
-                    <a href="https://sandeep-joshi123.github.io/SANDEEPJOSHI.COM" class="btns" id="knowMe" target="_blank">know me</a>
+                    <a href="https://sandeep-joshi123.github.io/SANDEEPJOSHI.com/" class="btns" id="knowMe" target="_blank">know me</a>
                    
                     
                </div>
